--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
+    "styled-components": "^5.3.5",
     "toastify": "^2.0.1",
     "useparams": "^0.0.2",
     "web-vitals": "^2.1.4"
